--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.1",
-    "react-slick": "^0.30.2"
+    "react-slick": "^0.30.2",
+    "tailwindcss": "^3.4.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
